grafanadashboard/InstallationYamlFiles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafanadashboard-cert-refresher
  namespace: grafanadashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-refresher
  template:
    metadata:
      labels:
        app: cert-refresher
    spec:
      serviceAccountName: grafanadashboard-sa
      containers:
        - name: refresher
          image: busybox
          command: ["sleep", "3600"]
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "grafana-cert-kv"

---

admin:
  existingSecret: grafana-admin-credentials
  userKey: GF_SECURITY_ADMIN_USER
  passwordKey: GF_SECURITY_ADMIN_PASSWORD


persistence:
  enabled: true
  storageClassName: default  # or your custom StorageClass
  accessModes:
    - ReadWriteOnce
  size: 10Gi

service:
  type: ClusterIP

ingress:
  enabled: true
  ingressClassName: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  hosts:
    - grafanadashboard.devops-tool.com
  tls:
    - secretName: grafana-ingress-tls
      hosts:
        - grafanadashboard.devops-tool.com

# 🧠 Datasource configuration
datasources:
  datasources.yaml:
    apiVersion: 1
    datasources:
      - name: VictoriaMetrics
        type: prometheus
        access: proxy
        isDefault: true
        url: https://vmselect.devops-tool.com/select/0/prometheus

# 📦 Auto-import dashboards created by VictoriaMetrics as ConfigMaps
sidecar:
  dashboards:
    enabled: true
    label: grafana_dashboard
    searchNamespace: victoriametrics
    folder: /var/lib/grafana/dashboards
    defaultFolderName: VictoriaMetrics

dashboardProviders:
  dashboardproviders.yaml:
    apiVersion: 1
    providers:
      - name: 'VictoriaMetrics'
        orgId: 1
        folder: 'VictoriaMetrics'
        type: file
        disableDeletion: false
        editable: true
        options:
          path: /var/lib/grafana/dashboards/VictoriaMetrics

extraVolumes:
  - name: grafana-secret-kv
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: grafana-secret-kv

extraVolumeMounts:
  - name: grafana-secret-kv
    mountPath: /mnt/secrets-store
    readOnly: true
