grafanadashboard/secretLogin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-secret-refresher
  namespace: grafanadashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-refresher
  template:
    metadata:
      labels:
        app: secret-refresher
    spec:
      serviceAccountName: grafanadashboard-sa
      containers:
        - name: refresher
          image: busybox
          command: ["sleep", "3600"]
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "grafana-secret-kv"
